Merged revisions 7795-8488 via svnmerge from https://svn.terracotta.org/repo/tc/dso/trunk
........
  r7803 | jvoegele | 2008-03-31 11:51:59 -0700 (Mon, 31 Mar 2008) | 2 lines
  
  Restored sigarstats module (reverted revision 7642).
........
  r7805 | jvoegele | 2008-03-31 12:43:05 -0700 (Mon, 31 Mar 2008) | 2 lines
  
  Include runtime libraries for sigarstats module.
........
  r7806 | jvoegele | 2008-03-31 13:20:45 -0700 (Mon, 31 Mar 2008) | 2 lines
  
  Added missing parameter.
........
  r7809 | jgalang | 2008-03-31 14:01:18 -0700 (Mon, 31 Mar 2008) | 9 lines
  
  CDV-571: The argument passing between dso-env.sh and the make boot jar tool don't agree, leading to much confusion.
  
  To refer to a config file when invoking dso-env, the user must now use a -f or --config switch.
  
    Eg: 
  
      ./dso-env.sh -q --config tc-config.xml
........
  r7810 | jvoegele | 2008-03-31 14:07:44 -0700 (Mon, 31 Mar 2008) | 3 lines
  
  Put sigar libs in sigarstats/lib directory instead of using Ivy, as doing so
  allows the libs to be packaged with the kit automatically.
........
  r7813 | jgalang | 2008-03-31 15:39:55 -0700 (Mon, 31 Mar 2008) | 1 line
  
  no need to pass --config since we set TC_CONFIG_PATH before the call, related to CDV-571
........
  r7816 | teck | 2008-03-31 15:48:59 -0700 (Mon, 31 Mar 2008) | 2 lines
  
  merge 7815 from 2.6
........
  r7817 | hhuynh | 2008-03-31 15:51:08 -0700 (Mon, 31 Mar 2008) | 1 line
  
  MNK-483: extend timebomb
........
  r7819 | ssubbiah | 2008-03-31 16:22:31 -0700 (Mon, 31 Mar 2008) | 1 line
  
  Removed some invalid tests and reenabled tests
........
  r7821 | jgalang | 2008-03-31 16:29:00 -0700 (Mon, 31 Mar 2008) | 1 line
  
  merged CDV-571 patch from 2.6 branch
........
  r7823 | rsingh | 2008-03-31 17:25:31 -0700 (Mon, 31 Mar 2008) | 4 lines
  
  This checkin changes LcokManagerSystemTest such that the code for sending the lock request and receiing the lock response is stubbed out and so no longer a server/client is sp